--- a/vaccination/package.json
+++ b/vaccination/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@date-io/core": "^2.11.0",
     "@date-io/date-fns": "^2.11.0",
-    "@date-io/moment": "^2.11.0",
+    "@date-io/dayjs": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
