--- a/vaccination/package.json
+++ b/vaccination/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "@mui/material": "^5.2.8",
     "@testing-library/jest-dom": "^5.16.1",
